css/media-queries.css
@media screen and (max-width: 930px) {
  .gallery-container,
  .singles-container,
  .albums-container {
    grid-template-columns: repeat(4, 1fr);
  }
  .products {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (max-width: 860px) {
  /* Display nav hamburger menu */
  .hamburger-menu {
    display: block;
    font-size: 2.4rem;
  }
  #main-navigation {
    display: none;
  }
  .images-container,
  .gallery-container,
  .singles-container,
  .albums-container {
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
  }
  .products {
    grid-template-columns: repeat(2, 1fr);
  }
  /* ==== ABOUT US ==== */
  .about-us {
    margin-top: 4rem;
  }
  .about-container {
    line-height: 1.6;
    font-size: 1.4rem;
  }
  /* ==== IMAGES ==== */
  .gallery-showcase img {
    height: 40rem;
  }
  /* ==== FOOTER ==== */
  .footer-top {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 6rem;
    text-align: center;
  }
}

@media screen and (max-width: 660px) {
  /* ==== TICKETS ==== */
  .tickets {
    padding: 0.8rem 2.4rem;
  }
  /* ==== IMAGES ==== */
  .images-container,
  .gallery-container,
  .singles-container,
  .albums-container {
    grid-template-columns: repeat(2, 1fr);
  }
  .products {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media screen and (max-width: 550px) {
  /* ==== HERO ==== */
  #hero-logo {
    font-size: 3.2rem;
  }
  #hero-description {
    font-size: 1.8rem;
  }
  .hero-bottom a {
    padding: 0.8rem 2.4rem;
    font-size: 2.4rem;
  }
  /* ==== CONCERTS ==== */
  .next-concert p {
    padding: 0.4rem 2.4rem;
    font-size: 1.6rem;
  }
  /* ==== MUSIKK ==== */
  .showcase-single {
    gap: 2rem;
  }
  /* ==== NEXT CONCERT ==== */
  .next-concert {
    display: none;
  }
}

@media screen and (max-width: 482px) {
  /* ==== HEADER ==== */
  header {
    height: 8rem;
    padding: 0 3.2rem;
  }
  /* ==== HERO ==== */
  .hero-container {
    background-image: none;
    justify-content: center;
    gap: 12rem;
  }
  /* ==== CONCERTS ==== */
  .concert-container {
    font-size: 1.6rem;
    flex-direction: column;
    gap: 1.6rem;
  }
  .tickets {
    padding: 0.4rem 1.6rem;
  }
  /* ==== IMAGES ==== */
  .images-container,
  .gallery-container,
  .singles-container,
  .albums-container,
  .products {
    grid-template-columns: repeat(1, 1fr);
  }
  .all-products-container {
    flex-direction: column;
    align-items: center;
  }
  .products {
    margin: 0 auto;
  }
  /* ==== MUSIKK ==== */
  .showcase-single {
    flex-direction: column;
    align-items: center;
  }
}

@media screen and (max-width: 405px) {
  /* ==== HERO ==== */
  .hero-container {
    height: auto;
  }
  /* ==== IMAGES ==== */
  .gallery-showcase img {
    height: 22rem;
  }
  /* ==== SHOP ==== */
}

